# E-Commerce-API

./: Cargo.toml  Readme.md
migrations/: 0001_users_table.sql  0002_items_table.sql  0003_orders.sql
src/: config.rs  db.rs  error.rs  main.rs  state.rs
src/middleware/: auth.rs
src/models/: auth.rs  mod.rs  order.rs  product.rs  user.rs
src/services/: order.rs  product.rs  user.rs
