[package]
name = "shoppings"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-rustls", "macros", "migrate"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "8"
chrono = '*'
bcrypt = "0.15"
